🏬 Fix invisible top bar blocking click events

--- a/app/meteor/client/ui/layout/userPanelStyle.scss
+++ b/app/meteor/client/ui/layout/userPanelStyle.scss
@@ -14,3 +14,7 @@
   padding-bottom: 7px;
   padding-top: 7px;
 }
+
+:local(.button) {
+  padding: 3px;
+}
